Name:                implicit
Version:             0.0.5
cabal-version:       >= 1.8
Synopsis:            Math-inspired programmatic 2&3D CAD: CSG, bevels, and shells; gcode export..
Description:         A math-inspired programmatic CAD library in haskell.
                     Build objects with constructive solid geometry, bevels,
                     shells and more in 2D & 3D. Then export to SVGs, STLs, 
                     or produce gcode directly!
License:             GPL
License-file:        LICENSE
Author:              Christopher Olah
Maintainer:          Mike MacHenry <mike.machenry@gmail.com>
Homepage:            https://github.com/colah/ImplicitCAD
build-type:          Simple
Category:            Graphics

library

    hs-source-dirs: .
    build-depends:
        base >= 3 && < 5,
        filepath,
        directory,
        optparse-applicative >= 0.10.0,
        parsec,
        unordered-containers,
        parallel,
        containers,
        deepseq,
        vector-space,
        text,
        mtl,
        bytestring,
        blaze-builder,
        blaze-markup,
        blaze-svg,
        hspec,
        storable-endian,
        JuicyPixels,
        NumInstances
        
    ghc-options:
        -O2 -optc-O3
        -rtsopts
        -funfolding-use-threshold=16 
        -fspec-constr-count=10

    Extensions:
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        IncoherentInstances,
        KindSignatures,
        MultiParamTypeClasses,
        NoMonomorphismRestriction,
        OverloadedStrings,
        ParallelListComp,
        RankNTypes,
        ScopedTypeVariables,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns,
        OverloadedStrings

    Exposed-Modules:   
        Graphics.Implicit
        Graphics.Implicit.Definitions
        Graphics.Implicit.Primitives
        Graphics.Implicit.Export
        Graphics.Implicit.MathUtil
        Graphics.Implicit.ExtOpenScad
        Graphics.Implicit.ObjectUtil
        Graphics.Implicit.Spec
        -- TODO: this is used by extopenscad for providing $res; we
        -- need an API to implement dynamic variables, and then scrap
        -- that exposed module.
        Graphics.Implicit.ExtOpenScad.Definitions
        
    Other-Modules:
        Graphics.Implicit.ObjectUtil.GetBox2
        Graphics.Implicit.ObjectUtil.GetBox3
        Graphics.Implicit.ObjectUtil.GetImplicit2
        Graphics.Implicit.ObjectUtil.GetImplicit3
        Graphics.Implicit.ExtOpenScad.Default
        Graphics.Implicit.ExtOpenScad.Parser.Util
        Graphics.Implicit.ExtOpenScad.Parser.Statement
        Graphics.Implicit.ExtOpenScad.Parser.Expr
        --Graphics.Implicit.ExtOpenScad.Definitions
        Graphics.Implicit.ExtOpenScad.Primitives
        Graphics.Implicit.ExtOpenScad.Eval.Statement
        Graphics.Implicit.ExtOpenScad.Eval.Expr
        Graphics.Implicit.ExtOpenScad.Util.StateC
        Graphics.Implicit.ExtOpenScad.Util.ArgParser
        Graphics.Implicit.ExtOpenScad.Util.OVal
        Graphics.Implicit.Export.Definitions
        Graphics.Implicit.Export.MarchingSquares
        Graphics.Implicit.Export.MarchingSquaresFill
        Graphics.Implicit.Export.SymbolicObj2
        Graphics.Implicit.Export.SymbolicObj3
        Graphics.Implicit.Export.RayTrace
        Graphics.Implicit.Export.PolylineFormats
        Graphics.Implicit.Export.TriangleMeshFormats
        Graphics.Implicit.Export.NormedTriangleMeshFormats
        Graphics.Implicit.Export.SymbolicFormats
        Graphics.Implicit.Export.Util
        Graphics.Implicit.Export.TextBuilderUtils
        Graphics.Implicit.Export.Symbolic.Rebound2
        Graphics.Implicit.Export.Symbolic.Rebound3
        Graphics.Implicit.Export.Render
        Graphics.Implicit.Export.Render.Definitions
        Graphics.Implicit.Export.Render.GetLoops
        Graphics.Implicit.Export.Render.GetSegs
        Graphics.Implicit.Export.Render.HandleSquares
        Graphics.Implicit.Export.Render.Interpolate
        Graphics.Implicit.Export.Render.RefineSegs
        Graphics.Implicit.Export.Render.TesselateLoops
        Graphics.Implicit.Export.Render.HandlePolylines
        Graphics.Implicit.Spec.Parser
        Graphics.Implicit.Spec.Parser.Util
        Graphics.Implicit.Spec.Parser.Expr
        Graphics.Implicit.Spec.Parser.Statement

executable extopenscad

    hs-source-dirs: programs
    main-is: extopenscad.hs
    build-depends:
        base,
        implicit,
        containers, vector-space, optparse-applicative, filepath
    ghc-options:
        -O2 -optc-O3
        -threaded
        -rtsopts
        -funfolding-use-threshold=16 
        -fspec-constr-count=10

source-repository head
    type:            git
    location:        https://github.com/colah/ImplicitCAD.git

test-suite test-implicit
    type: exitcode-stdio-1.0
    build-depends: base, hspec, implicit
    main-is: Spec.hs
    hs-source-dirs: test-suite
